@@ -1,3 +1,9 @@
+1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Value2dDisplay.m ([Value -display]): Remove METHODS and USE_JAVA
+	ifdefs.  Add a conditional on drawPointImp, in case it came
+	up NULL due to a JavaProxy.
+
 1999-06-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Discrete2d.m ([Discrete2d hdf5In{Create}:]): Handle compound
